cluster/services/db-sync-checking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-sync-checking
spec:
  selector:
    matchLabels:
      run: db-sync-checking
  replicas: 1
  template:
    metadata:
      labels:
        run: db-sync-checking
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - image: ohthehugemanatee/db-ynab-sync:0.9.5
        name: db-sync-checking
        ports:
        - containerPort: 3000
          name: dbsyncchecking
          protocol: TCP
        ports:
        - containerPort: 3000
          name: dbsyncchecking
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: db-sync-checking
  name: db-sync-checking
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    run: db-sync-checking

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: db-sync-checking
  annotations:
    traefik.frontend.priority: "2"
    cert-manager.io/cluster-issuer: selfsigned
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  rules:
  - host: db-ynab-sync.cluster.vert
    http:
      paths:
      - backend:
          service:
            name: db-sync-checking
            port: 
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - db-ynab-sync.cluster.vert
    secretName: db--ynab--sync-cluster-vert--tls
